// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cost per piece 1`] = `
<div
  id="App"
>
  <Header
    routeState={
      Object {
        "current": "ROUTE_CostPerPiece",
        "selected_load_id": 5,
        "station_free_material": false,
        "station_monitor": "StationType_LoadUnload",
        "station_queues": Array [
          "q1",
          "q1",
        ],
      }
    }
    setRoute={[Function]}
  />
  <CostPerPiece />
</div>
`;

exports[`cost per piece header 1`] = `
<nav
  id="navHeader"
>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          style={
            Object {
              "marginRight": "2em",
            }
          }
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <WithStyles(Tabs)
          fullWidth={false}
          onChange={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "flexGrow": 1,
            }
          }
          value={3}
        >
          <WithStyles(Tab)
            label="Dashboard"
            value={0}
          />
          <WithStyles(Tab)
            label="Station Monitor"
            value={1}
          />
          <WithStyles(Tab)
            label="Efficiency"
            value={2}
          />
          <WithStyles(Tab)
            label="Cost/Piece"
            value={3}
          />
        </WithStyles(Tabs)>
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
    </WithStyles(AppBar)>
  </Hidden>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "flex-grow": "1",
            }
          }
        />
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
      <WithStyles(Tabs)
        fullWidth={true}
        onChange={[Function]}
        style={Object {}}
        value={3}
      >
        <WithStyles(Tab)
          label="Dashboard"
          value={0}
        />
        <WithStyles(Tab)
          label="Station Monitor"
          value={1}
        />
        <WithStyles(Tab)
          label="Efficiency"
          value={2}
        />
        <WithStyles(Tab)
          label="Cost/Piece"
          value={3}
        />
      </WithStyles(Tabs)>
    </WithStyles(AppBar)>
  </Hidden>
</nav>
`;

exports[`dashboard 1`] = `
<div
  id="App"
>
  <Header
    routeState={
      Object {
        "current": "ROUTE_Dashboard",
        "selected_load_id": 5,
        "station_free_material": false,
        "station_monitor": "StationType_LoadUnload",
        "station_queues": Array [
          "q1",
          "q1",
        ],
      }
    }
    setRoute={[Function]}
  />
  <Dashboard />
</div>
`;

exports[`dashboard header 1`] = `
<nav
  id="navHeader"
>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          style={
            Object {
              "marginRight": "2em",
            }
          }
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <WithStyles(Tabs)
          fullWidth={false}
          onChange={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "flexGrow": 1,
            }
          }
          value={0}
        >
          <WithStyles(Tab)
            label="Dashboard"
            value={0}
          />
          <WithStyles(Tab)
            label="Station Monitor"
            value={1}
          />
          <WithStyles(Tab)
            label="Efficiency"
            value={2}
          />
          <WithStyles(Tab)
            label="Cost/Piece"
            value={3}
          />
        </WithStyles(Tabs)>
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
    </WithStyles(AppBar)>
  </Hidden>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "flex-grow": "1",
            }
          }
        />
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
      <WithStyles(Tabs)
        fullWidth={true}
        onChange={[Function]}
        style={Object {}}
        value={0}
      >
        <WithStyles(Tab)
          label="Dashboard"
          value={0}
        />
        <WithStyles(Tab)
          label="Station Monitor"
          value={1}
        />
        <WithStyles(Tab)
          label="Efficiency"
          value={2}
        />
        <WithStyles(Tab)
          label="Cost/Piece"
          value={3}
        />
      </WithStyles(Tabs)>
    </WithStyles(AppBar)>
  </Hidden>
</nav>
`;

exports[`efficiency 1`] = `
<div
  id="App"
>
  <Header
    routeState={
      Object {
        "current": "ROUTE_Efficiency",
        "selected_load_id": 5,
        "station_free_material": false,
        "station_monitor": "StationType_LoadUnload",
        "station_queues": Array [
          "q1",
          "q1",
        ],
      }
    }
    setRoute={[Function]}
  />
  <Efficiency />
</div>
`;

exports[`efficiency header 1`] = `
<nav
  id="navHeader"
>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          style={
            Object {
              "marginRight": "2em",
            }
          }
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <WithStyles(Tabs)
          fullWidth={false}
          onChange={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "flexGrow": 1,
            }
          }
          value={2}
        >
          <WithStyles(Tab)
            label="Dashboard"
            value={0}
          />
          <WithStyles(Tab)
            label="Station Monitor"
            value={1}
          />
          <WithStyles(Tab)
            label="Efficiency"
            value={2}
          />
          <WithStyles(Tab)
            label="Cost/Piece"
            value={3}
          />
        </WithStyles(Tabs)>
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
    </WithStyles(AppBar)>
  </Hidden>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "flex-grow": "1",
            }
          }
        />
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
      <WithStyles(Tabs)
        fullWidth={true}
        onChange={[Function]}
        style={Object {}}
        value={2}
      >
        <WithStyles(Tab)
          label="Dashboard"
          value={0}
        />
        <WithStyles(Tab)
          label="Station Monitor"
          value={1}
        />
        <WithStyles(Tab)
          label="Efficiency"
          value={2}
        />
        <WithStyles(Tab)
          label="Cost/Piece"
          value={3}
        />
      </WithStyles(Tabs)>
    </WithStyles(AppBar)>
  </Hidden>
</nav>
`;

exports[`inspection monitor 1`] = `
<div
  id="App"
>
  <Header
    routeState={
      Object {
        "current": "ROUTE_Inspection",
        "selected_load_id": 5,
        "station_free_material": false,
        "station_monitor": "StationType_Insp",
        "station_queues": Array [
          "q1",
          "q1",
        ],
      }
    }
    setRoute={[Function]}
  />
  <Connect(StationMonitor) />
</div>
`;

exports[`inspection monitor header 1`] = `
<nav
  id="navHeader"
>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          style={
            Object {
              "marginRight": "2em",
            }
          }
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <WithStyles(Tabs)
          fullWidth={false}
          onChange={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "flexGrow": 1,
            }
          }
          value={1}
        >
          <WithStyles(Tab)
            label="Dashboard"
            value={0}
          />
          <WithStyles(Tab)
            label="Station Monitor"
            value={1}
          />
          <WithStyles(Tab)
            label="Efficiency"
            value={2}
          />
          <WithStyles(Tab)
            label="Cost/Piece"
            value={3}
          />
        </WithStyles(Tabs)>
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
    </WithStyles(AppBar)>
  </Hidden>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "flex-grow": "1",
            }
          }
        />
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
      <WithStyles(Tabs)
        fullWidth={true}
        onChange={[Function]}
        style={Object {}}
        value={1}
      >
        <WithStyles(Tab)
          label="Dashboard"
          value={0}
        />
        <WithStyles(Tab)
          label="Station Monitor"
          value={1}
        />
        <WithStyles(Tab)
          label="Efficiency"
          value={2}
        />
        <WithStyles(Tab)
          label="Cost/Piece"
          value={3}
        />
      </WithStyles(Tabs)>
    </WithStyles(AppBar)>
  </Hidden>
</nav>
`;

exports[`station monitor 1`] = `
<div
  id="App"
>
  <Header
    routeState={
      Object {
        "current": "ROUTE_LoadMonitor",
        "selected_load_id": 5,
        "station_free_material": false,
        "station_monitor": "StationType_LoadUnload",
        "station_queues": Array [
          "q1",
          "q1",
        ],
      }
    }
    setRoute={[Function]}
  />
  <Connect(StationMonitor) />
</div>
`;

exports[`station monitor header 1`] = `
<nav
  id="navHeader"
>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          style={
            Object {
              "marginRight": "2em",
            }
          }
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <WithStyles(Tabs)
          fullWidth={false}
          onChange={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "flexGrow": 1,
            }
          }
          value={1}
        >
          <WithStyles(Tab)
            label="Dashboard"
            value={0}
          />
          <WithStyles(Tab)
            label="Station Monitor"
            value={1}
          />
          <WithStyles(Tab)
            label="Efficiency"
            value={2}
          />
          <WithStyles(Tab)
            label="Cost/Piece"
            value={3}
          />
        </WithStyles(Tabs)>
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
    </WithStyles(AppBar)>
  </Hidden>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "flex-grow": "1",
            }
          }
        />
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
      <WithStyles(Tabs)
        fullWidth={true}
        onChange={[Function]}
        style={Object {}}
        value={1}
      >
        <WithStyles(Tab)
          label="Dashboard"
          value={0}
        />
        <WithStyles(Tab)
          label="Station Monitor"
          value={1}
        />
        <WithStyles(Tab)
          label="Efficiency"
          value={2}
        />
        <WithStyles(Tab)
          label="Cost/Piece"
          value={3}
        />
      </WithStyles(Tabs)>
    </WithStyles(AppBar)>
  </Hidden>
</nav>
`;

exports[`wash monitor 1`] = `
<div
  id="App"
>
  <Header
    routeState={
      Object {
        "current": "ROUTE_Wash",
        "selected_load_id": 5,
        "station_free_material": false,
        "station_monitor": "StationType_Wash",
        "station_queues": Array [
          "q1",
          "q1",
        ],
      }
    }
    setRoute={[Function]}
  />
  <Connect(StationMonitor) />
</div>
`;

exports[`wash monitor header 1`] = `
<nav
  id="navHeader"
>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={true}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          style={
            Object {
              "marginRight": "2em",
            }
          }
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <WithStyles(Tabs)
          fullWidth={false}
          onChange={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "flexGrow": 1,
            }
          }
          value={1}
        >
          <WithStyles(Tab)
            label="Dashboard"
            value={0}
          />
          <WithStyles(Tab)
            label="Station Monitor"
            value={1}
          />
          <WithStyles(Tab)
            label="Efficiency"
            value={2}
          />
          <WithStyles(Tab)
            label="Cost/Piece"
            value={3}
          />
        </WithStyles(Tabs)>
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
    </WithStyles(AppBar)>
  </Hidden>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={true}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(AppBar)
      position="static"
    >
      <WithStyles(Toolbar)>
        <WithStyles(Typography)
          variant="title"
        >
          Insight
        </WithStyles(Typography)>
        <div
          style={
            Object {
              "flex-grow": "1",
            }
          }
        />
        <Connect(LoadingIcon) />
      </WithStyles(Toolbar)>
      <WithStyles(Tabs)
        fullWidth={true}
        onChange={[Function]}
        style={Object {}}
        value={1}
      >
        <WithStyles(Tab)
          label="Dashboard"
          value={0}
        />
        <WithStyles(Tab)
          label="Station Monitor"
          value={1}
        />
        <WithStyles(Tab)
          label="Efficiency"
          value={2}
        />
        <WithStyles(Tab)
          label="Cost/Piece"
          value={3}
        />
      </WithStyles(Tabs)>
    </WithStyles(AppBar)>
  </Hidden>
</nav>
`;
